--- a/sample.html
+++ b/sample.html
@@ -5,9 +5,36 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
+<style>
+    #content{
+        width: 600px;
+        margin: 0 auto;
+    }
+    #top{
+        height: 200px;
+
+    }
+
+    #mid{
+        height: 400px;
+        text-align: center;
+    }
+
+    #bottom{
+        height: 200px;
+    }
+</style>
 <body>
-    <div id="top">
-        <span>Hello world!</span>
+    <div id="content">
+        <div id="top">
+            
+        </div>
+        <div id="mid">
+            <span>今はGitの練習をしています。</span>
+        </div>
+        <div id="bottom">
+
+        </div>
     </div>
 </body>
 </html>
